[tool.poetry]
name = "xlsx_template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
openpyxl = "^3.0.5"
pyparsing = "^2.4.7"
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pudb = "^2019.2"
ipython = "^7.19.0"
pytest = "^6.1.2"
rope = "^0.18.0"
pytest-cov = "^2.10.1"
black = "^20.8b1"
tox-venv = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
